--- a/mystyle.css
+++ b/mystyle.css
@@ -40,7 +40,7 @@ ul {
   padding: 0;
   width: 25%;
   background-color: darkolivegreen;
-  position: auto;
+  position: fixed;
   height: 100%;
   overflow: auto;
   }
