--- a/mystyle.css
+++ b/mystyle.css
@@ -56,3 +56,14 @@ li a:hover:not(.active) {
   background-color: darkolivegreen;
   color: white;
 }
+footer {
+  color: black;
+ font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 30px;
+  padding: 30px;
+  text-align: center;
+  background-color: darkolivegreen;
+  border: 2px solid black;
+  list-style-type: square;
+  }
