--- a/mystyle.css
+++ b/mystyle.css
@@ -11,6 +11,8 @@ body {
   margin: 20px;
   padding: 20px;
   text-align: center;
+  
+
 }
 .sections {
  color: black;
@@ -33,12 +35,12 @@ body {
   background-color: darkolivegreen;
   border: 2px solid black;
 }
-
+/*Nav bar*/
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 25%;
+  margin: auto;
+  padding: auto;
+  width: auto;
   background-color: darkolivegreen;
   position: fixed;
   height: 100%;
@@ -56,6 +58,9 @@ li a:hover:not(.active) {
   background-color: darkolivegreen;
   color: white;
 }
+
+
+/*three semantic HTML5 elements */
 footer {
   color: black;
  font-size: 30px;
@@ -67,3 +72,22 @@ footer {
   border: 2px solid black;
   list-style-type: square;
   }
+  
+  Header {
+  color: black;
+ font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  padding: 20px;
+  text-align: left;
+    background-color: darkolivegreen;
+	 padding: 30px;
+  }
+  
+  aside {
+  width: 30%;
+  padding-left: 100px;
+  margin-left: 50px;
+  float: left;
+  font-style: italic;
+  background-color: darkolivegreen;
